--- a/main.css
+++ b/main.css
@@ -42,7 +42,6 @@ h3 {
   -webkit-padding-start: 0;
           padding-inline-start: 0;
   list-style-type: none;
-  line-height: 1;
 }
 .header nav > ul a {
   color: #242424;
@@ -66,7 +65,7 @@ h3 {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  align-items: center;
+  align-items: start;
 }
 .header div .header-email {
   max-width: 30px;
@@ -84,12 +83,17 @@ h3 {
 .header div a:hover {
   color: #242424;
 }
+.header div a:nth-child(1) {
+  font-size: 0.8em;
+  line-height: 2.2;
+}
 .header div a:nth-child(1) img {
   margin-right: 1vw;
 }
 .header div a:nth-child(2),
 .header div a:nth-child(3) {
   padding-left: 3vw;
+  margin-top: -12px;
 }
 
 .heroSection {
@@ -120,6 +124,7 @@ h3 {
   font-weight: 300;
   -webkit-margin-before: 0.5em;
           margin-block-start: 0.5em;
+  margin-bottom: 20px;
 }
 .heroSection section a {
   display: block;
@@ -235,12 +240,12 @@ h3 {
   margin-bottom: 15vh;
 }
 .contactMe h3 {
-  -webkit-margin-after: 0;
-          margin-block-end: 0;
+  -webkit-margin-after: 0.2em;
+          margin-block-end: 0.2em;
   line-height: 1;
 }
 .contactMe p {
-  margin-bottom: 3vh;
+  margin-bottom: 25px;
 }
 .contactMe div {
   display: flex;
