--- a/main.scss
+++ b/main.scss
@@ -48,7 +48,6 @@ h3 {
             align-items: center;
             padding-inline-start: 0;
             list-style-type: none;
-            line-height: 1;
 
             a {
                   color: $black;
@@ -77,7 +76,7 @@ h3 {
             display: flex;
             flex-direction: row;
             justify-content: space-around;
-            align-items: center;
+            align-items: start;
             .header-email {
                   max-width: 30px;
             }
@@ -97,12 +96,18 @@ h3 {
                         color: $black;
                   }
             }
-            a:nth-child(1) img {
-                  margin-right: 1vw;
+            a:nth-child(1) {
+                  font-size: 0.8em;
+                  line-height: 2.2;
+
+                  img {
+                        margin-right: 1vw;
+                  }
             }
             a:nth-child(2),
             a:nth-child(3) {
                   padding-left: 3vw;
+                  margin-top: -12px;
             }
       }
 }
@@ -137,6 +142,7 @@ h3 {
             p {
                   font-weight: 300;
                   margin-block-start: 0.5em;
+                  margin-bottom: 20px;
             }
 
             a {
@@ -266,12 +272,12 @@ h3 {
       margin-bottom: 15vh;
 
       h3 {
-            margin-block-end: 0;
+            margin-block-end: 0.2em;
             line-height: 1;
       }
 
       p {
-            margin-bottom: 3vh;
+            margin-bottom: 25px;
       }
       div {
             display: flex;
