--- a/main.css
+++ b/main.css
@@ -7,8 +7,21 @@ body {
   color: #242424;
 }
 
-h1 {
+h1,
+#mobileMenuOpen,
+#mobileMenuClose {
   display: none;
+}
+
+#mobileMenuOpen,
+#mobileMenuClose {
+  max-width: 80px;
+  min-width: 60px;
+  transition: transform 0.2s;
+}
+#mobileMenuOpen:hover,
+#mobileMenuClose:hover {
+  transform: scale(1.1);
 }
 
 h2,
@@ -26,8 +39,9 @@ h3 {
   color: #c70039;
 }
 
+/* -------------------------    HEADER    ------------------------- */
 .header {
-  padding: 80px;
+  padding: 80px 0;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -54,7 +68,7 @@ h3 {
   color: #c70039;
   text-decoration: underline;
 }
-.header nav > ul li:nth-child(n+2) {
+.header nav > ul li:nth-child(n+2) a {
   padding-left: 2vw;
 }
 .header nav > ul .accentColor {
@@ -72,6 +86,10 @@ h3 {
 }
 .header div img {
   max-width: 60px;
+  transition: transform 0.2s;
+}
+.header div img:hover {
+  transform: scale(1.05);
 }
 .header div a {
   display: flex;
@@ -96,6 +114,7 @@ h3 {
   margin-top: -12px;
 }
 
+/* -------------------------    HERO SECTION    ------------------------- */
 .heroSection {
   display: flex;
   flex-direction: row;
@@ -106,6 +125,7 @@ h3 {
 .heroSection .hero-img {
   border-radius: 50%;
   max-width: 570px;
+  width: 100%;
 }
 .heroSection section {
   max-width: 570px;
@@ -116,9 +136,13 @@ h3 {
   -webkit-margin-after: 0;
           margin-block-end: 0;
 }
+.heroSection section h2 strong {
+  display: block;
+}
 .heroSection section h2 span {
   font-size: 2em;
   line-height: 0;
+  font-weight: 400;
 }
 .heroSection section p {
   font-weight: 300;
@@ -145,13 +169,14 @@ h3 {
   background-color: #f8f8ff;
 }
 
+/* -------------------------    ABOUT ME    ------------------------- */
 .aboutMe {
   margin-top: 25vh;
   margin-bottom: 25vh;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  align-items: flex-start;
+  align-items: center;
 }
 .aboutMe .infoWrapper {
   display: flex;
@@ -183,9 +208,10 @@ h3 {
           margin-block-end: 0;
 }
 
+/* -------------------------    EXPERIENCE    ------------------------- */
 .experience {
   margin-top: 25vh;
-  margin-bottom: 20vh;
+  margin-bottom: 25vh;
 }
 .experience h3 {
   margin-bottom: 90px;
@@ -210,8 +236,8 @@ h3 {
   margin-bottom: 100px;
 }
 .experience .worklist .experienceList div {
-  min-width: 400px;
-  padding-left: 120px;
+  min-width: 500px;
+  padding-left: 6.25vw;
 }
 .experience .worklist .experienceList div h4 {
   -webkit-margin-before: 0;
@@ -231,26 +257,23 @@ h3 {
   font-weight: 300;
 }
 .experience .worklist .experienceList p {
-  max-width: 510px;
+  max-width: 500px;
   -webkit-margin-before: 0;
           margin-block-start: 0;
 }
 
+/* -------------------------    CONTACT    ------------------------- */
 .contactMe {
   margin-bottom: 15vh;
 }
-.contactMe h3 {
-  -webkit-margin-after: 0.2em;
-          margin-block-end: 0.2em;
-  line-height: 1;
-}
 .contactMe p {
-  margin-bottom: 25px;
+  margin-bottom: 40px;
 }
 .contactMe div {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 .contactMe div a {
   display: flex;
@@ -263,10 +286,11 @@ h3 {
   color: #c70039;
 }
 .contactMe div a img {
-  margin-right: 1.2vw;
+  margin-right: 30px;
   max-width: 60px;
 }
 
+/* -------------------------    DIVIDER    ------------------------- */
 .dividerBlack {
   width: 100%;
   margin: 0;
@@ -281,6 +305,7 @@ h3 {
   background-color: #c70039;
 }
 
+/* -------------------------    FOOTER    ------------------------- */
 footer {
   background-color: #242424;
   min-height: 450px;
@@ -295,6 +320,7 @@ footer img {
 }
 footer p {
   margin-top: 6vh;
+  margin-bottom: 6vh;
   color: #f8f8ff;
 }
 footer p a {
@@ -307,4 +333,388 @@ footer p a:visited {
 }
 footer p a:hover {
   color: #c70039;
+}
+
+/* -------------------------    MEDIA QUERIES    ------------------------- */
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (max-width: 1720px) {
+  header .header .contactNav a {
+    padding-left: 2vw;
+  }
+  header .header .contactNav a:nth-child(1) {
+    margin-top: -12px;
+  }
+  header .header .contactNav a img {
+    max-width: 60px;
+    margin-right: 0;
+  }
+  header .header .contactNav a span {
+    display: none;
+  }
+  .contentWrap {
+    margin-left: 5vw;
+    margin-right: 5vw;
+  }
+  .heroSection {
+    justify-content: space-between;
+  }
+}
+@media only screen and (max-width: 1500px) {
+  .heroSection img,
+  .heroSection section {
+    padding-left: 2vw;
+    padding-right: 2vw;
+  }
+  .heroSection div {
+    display: none;
+  }
+  .experience .worklist .experienceList div {
+    margin-right: 5vw;
+  }
+  .experience .worklist .experienceList p {
+    margin-left: 5vw;
+  }
+  .contactMe div a {
+    font-size: 0.8em;
+  }
+  .contactMe div a img {
+    margin-right: 20px;
+  }
+}
+@media only screen and (max-width: 1200px) {
+  header .header {
+    font-size: 0.9em;
+  }
+  header .header .contactNav a img {
+    max-width: 50px;
+  }
+  .heroSection {
+    flex-direction: column;
+  }
+  .heroSection section {
+    margin-top: 50px;
+    max-width: 600px;
+  }
+  .aboutMe {
+    flex-direction: column;
+    align-items: center;
+  }
+  .aboutMe .infoWrapper,
+  .aboutMe section {
+    max-width: 600px;
+    width: 100%;
+  }
+  .aboutMe .infoWrapper {
+    order: 2;
+    margin-top: 10vh;
+  }
+  .aboutMe section {
+    order: 1;
+  }
+  .experience .worklist .experienceList div,
+  .experience .worklist .experienceList p {
+    width: 40%;
+    min-width: 0;
+    padding: 0;
+    margin: 0;
+  }
+  .experience .worklist .experienceList p {
+    padding-left: 10vw;
+  }
+  .experience .worklist .experienceList div {
+    padding-left: 5vw;
+  }
+  .experience .worklist .experienceList div h4 span {
+    padding-left: 0;
+    display: block;
+  }
+  .contactMe div a {
+    font-size: 0.65em;
+  }
+  .contactMe div a img {
+    margin-right: 10px;
+  }
+}
+@media only screen and (min-width: 1000px) {
+  header {
+    background-color: #f8f8ff !important;
+  }
+  header nav a {
+    color: #242424 !important;
+  }
+  header nav ul li:nth-child(n+2) a {
+    padding-left: 2vw !important;
+  }
+  header .headerLogo {
+    content: url("assets/logo.png");
+  }
+  header #mobileMenuOpen,
+  header #mobileMenuClose {
+    display: none !important;
+  }
+  header .header #mainNav,
+  header .header #contactNav {
+    display: flex !important;
+  }
+  header .header nav ul {
+    flex-direction: row;
+  }
+  header .header .contactNav {
+    flex-direction: row;
+  }
+  header .header .contactNav a {
+    margin-top: -12px;
+  }
+  header .header .contactNav .header-email {
+    content: url("assets/email.png");
+  }
+  header .header .contactNav .header-instagram {
+    content: url("assets/instagram.png");
+  }
+  header .header .contactNav .header-linkedin {
+    content: url("assets/linkedin.png");
+  }
+}
+@media only screen and (max-width: 1000px) {
+  body {
+    font-size: 1.6em;
+  }
+  header {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    margin-left: 0 !important;
+    margin-right: 0 !important;
+    padding-left: 5vw;
+    padding-right: 5vw;
+    margin-bottom: 80px !important;
+  }
+  header #mobileMenuOpen {
+    display: block;
+  }
+  header .header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+  }
+  header .header #mainNav,
+  header .header #contactNav {
+    display: none;
+  }
+  header .header nav {
+    margin-left: 20px;
+  }
+  header .header nav ul {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  header .header nav ul li {
+    padding-bottom: 10px;
+  }
+  header .header .contactNav {
+    flex-direction: column;
+  }
+  header .header .contactNav a {
+    margin: 0;
+    margin-bottom: 20px;
+  }
+  header .header .contactNav a img {
+    max-width: 40px;
+  }
+  .contactMe div {
+    justify-content: space-evenly;
+  }
+  .contactMe div a img {
+    margin-right: 0px;
+    transition: transform 0.2s;
+  }
+  .contactMe div a span {
+    display: none;
+  }
+  .contactMe div a:hover {
+    transform: scale(1.05);
+  }
+}
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (max-width: 768px) {
+  .experience .colorLine svg {
+    left: 2%;
+  }
+  .experience .worklist .experienceList {
+    flex-direction: column;
+    padding: 0;
+    margin: 0;
+    align-items: center;
+    margin-left: 10vw;
+    justify-content: space-between;
+    margin-bottom: 100px;
+  }
+  .experience .worklist .experienceList div,
+  .experience .worklist .experienceList p {
+    width: 85%;
+    margin: 0;
+    padding: 0;
+  }
+  .experience .worklist .experienceList p {
+    margin-top: 30px;
+  }
+}
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (max-width: 600px) {
+  header {
+    align-items: flex-start;
+    padding-top: 50px;
+  }
+  header .header {
+    flex-direction: column;
+    padding-top: 0;
+  }
+  header .header .headerLogo {
+    max-width: 100px;
+  }
+  header .header .menu-open,
+  header .header .menu-close {
+    max-width: 70px;
+    margin-top: 80px;
+  }
+  header .header #mainNav,
+  header .header #contactNav {
+    align-self: center;
+    margin-left: 11vw;
+  }
+  header .header #mainNav {
+    margin-bottom: 40px;
+    margin-top: 40px;
+  }
+  header .header #contactNav {
+    flex-direction: row;
+  }
+  header .header #contactNav a {
+    margin: 0 10px !important;
+  }
+  header .header #contactNav a img {
+    max-width: 50px;
+  }
+  footer {
+    min-height: 300px;
+  }
+  footer img {
+    max-width: 100px;
+    padding-top: 10vh;
+  }
+  footer p {
+    font-size: 0.7em;
+  }
+  footer p a {
+    font-size: 1.1em;
+  }
+}
+@media only screen and (max-width: 500px) {
+  .heroSection section h2 strong {
+    display: inline;
+  }
+  .aboutMe .infoWrapper {
+    align-self: center;
+  }
+}
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 400px) {
+  header .header {
+    flex-grow: 0 !important;
+  }
+  header .header #mainNav {
+    align-self: flex-start;
+    margin-left: 5vw;
+  }
+  header .header #contactNav {
+    flex-direction: column;
+    margin-left: 0;
+  }
+  header .header #contactNav a {
+    padding-bottom: 20px;
+  }
+  h3 {
+    font-size: 1.4em;
+  }
+  h2 {
+    font-size: 1.5em;
+  }
+  .contentWrap {
+    margin-left: 10vw;
+    margin-right: 10vw;
+  }
+  .heroSection section a {
+    font-size: 1em;
+  }
+  .aboutMe .infoWrapper div img {
+    max-width: 75px;
+  }
+  .aboutMe .infoWrapper div h4 {
+    font-size: 1em;
+    margin-left: 5vw;
+  }
+  .experience .colorLine {
+    display: none;
+  }
+  .experience .worklist .experienceList {
+    margin-left: 0;
+    justify-content: center;
+  }
+  .experience .worklist .experienceList div,
+  .experience .worklist .experienceList p {
+    width: 100%;
+  }
+  .experience .worklist .experienceList div h4 {
+    font-size: 1.1em;
+  }
+  .experience .worklist .experienceList div h4 span {
+    font-size: 0.9em;
+  }
+  .experience .worklist .experienceList div h5 {
+    font-size: 0.9em;
+  }
+  .contactMe div {
+    justify-content: space-between;
+  }
+  .contactMe div a img {
+    max-width: 50px;
+  }
+}
+@media only screen and (max-width: 300px) {
+  .aboutMe .infoWrapper div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .aboutMe .infoWrapper div img {
+    max-width: 100%;
+  }
+  .aboutMe .infoWrapper div h4 {
+    font-size: 1.2em;
+    margin-left: 0;
+    text-align: center;
+    margin-top: 20px;
+  }
+  .contactMe div {
+    flex-direction: column;
+    align-items: center;
+  }
+  .contactMe div a {
+    margin-top: 30px;
+  }
+  footer p {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 6vh;
+  }
+  footer p span {
+    display: block;
+  }
+  footer p a {
+    font-size: 1em;
+  }
 }/*# sourceMappingURL=main.css.map */
