--- a/main.scss
+++ b/main.scss
@@ -12,8 +12,20 @@ body {
       color: $black;
 }
 
-h1 {
+h1,
+#mobileMenuOpen,
+#mobileMenuClose {
       display: none;
+}
+
+#mobileMenuOpen,
+#mobileMenuClose {
+      max-width: 80px;
+      min-width: 60px;
+      transition: transform 0.2s;
+      &:hover {
+            transform: scale(1.1);
+      }
 }
 
 h2,
@@ -30,9 +42,10 @@ h3 {
       color: $accent;
 }
 
-// HEADER
+/* -------------------------    HEADER    ------------------------- */
+
 .header {
-      padding: 80px;
+      padding: 80px 0;
 
       .headerLogo {
             max-width: 150px;
@@ -64,7 +77,9 @@ h3 {
             }
 
             li:nth-child(n + 2) {
-                  padding-left: 2vw;
+                  a {
+                        padding-left: 2vw;
+                  }
             }
 
             .accentColor {
@@ -83,6 +98,10 @@ h3 {
 
             img {
                   max-width: 60px;
+                  transition: transform 0.2s;
+                  &:hover {
+                        transform: scale(1.05);
+                  }
             }
 
             a {
@@ -112,7 +131,8 @@ h3 {
       }
 }
 
-// HERO SECTION
+/* -------------------------    HERO SECTION    ------------------------- */
+
 .heroSection {
       display: flex;
       flex-direction: row;
@@ -123,6 +143,7 @@ h3 {
       .hero-img {
             border-radius: 50%;
             max-width: 570px;
+            width: 100%;
       }
 
       section {
@@ -132,10 +153,14 @@ h3 {
                   line-height: 1.2;
                   font-weight: 400;
                   margin-block-end: 0;
+                  strong {
+                        display: block;
+                  }
 
                   span {
                         font-size: 2em;
                         line-height: 0;
+                        font-weight: 400;
                   }
             }
 
@@ -167,15 +192,14 @@ h3 {
       }
 }
 
-// ABOUT ME
-
+/* -------------------------    ABOUT ME    ------------------------- */
 .aboutMe {
       margin-top: 25vh;
       margin-bottom: 25vh;
       display: flex;
       flex-direction: row;
       justify-content: space-around;
-      align-items: flex-start;
+      align-items: center;
 
       .infoWrapper {
             display: flex;
@@ -210,10 +234,10 @@ h3 {
       }
 }
 
-// EXPERIENCE SECTION
+/* -------------------------    EXPERIENCE    ------------------------- */
 .experience {
       margin-top: 25vh;
-      margin-bottom: 20vh;
+      margin-bottom: 25vh;
 
       h3 {
             margin-bottom: 90px;
@@ -241,8 +265,8 @@ h3 {
                   margin-bottom: 100px;
 
                   div {
-                        min-width: 400px;
-                        padding-left: 120px;
+                        min-width: 500px;
+                        padding-left: 6.25vw;
                         h4 {
                               margin-block-start: 0;
                               margin-block-end: 0;
@@ -260,29 +284,25 @@ h3 {
                   }
 
                   p {
-                        max-width: 510px;
+                        max-width: 500px;
                         margin-block-start: 0;
                   }
             }
       }
 }
 
-// CONTACT SECTION
+/* -------------------------    CONTACT    ------------------------- */
 .contactMe {
       margin-bottom: 15vh;
 
-      h3 {
-            margin-block-end: 0.2em;
-            line-height: 1;
-      }
-
       p {
-            margin-bottom: 25px;
+            margin-bottom: 40px;
       }
       div {
             display: flex;
             flex-direction: row;
             justify-content: space-between;
+            flex-wrap: wrap;
 
             a {
                   display: flex;
@@ -296,14 +316,14 @@ h3 {
                   }
 
                   img {
-                        margin-right: 1.2vw;
+                        margin-right: 30px;
                         max-width: 60px;
                   }
             }
       }
 }
 
-// DIVIDER
+/* -------------------------    DIVIDER    ------------------------- */
 @mixin divider {
       width: 100%;
       margin: 0;
@@ -318,7 +338,8 @@ h3 {
       @include divider;
       background-color: $accent;
 }
-// FOOTER
+
+/* -------------------------    FOOTER    ------------------------- */
 footer {
       background-color: $black;
       min-height: 450px;
@@ -334,6 +355,7 @@ footer {
 
       p {
             margin-top: 6vh;
+            margin-bottom: 6vh;
             color: $white;
 
             a {
@@ -347,6 +369,531 @@ footer {
 
                   &:hover {
                         color: $accent;
+                  }
+            }
+      }
+}
+
+/* -------------------------    MEDIA QUERIES    ------------------------- */
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+
+@media only screen and (max-width: 1720px) {
+      header {
+            .header {
+                  .contactNav {
+                        a {
+                              padding-left: 2vw;
+                              &:nth-child(1) {
+                                    margin-top: -12px;
+                              }
+                              img {
+                                    max-width: 60px;
+                                    margin-right: 0;
+                              }
+                              span {
+                                    display: none;
+                              }
+                        }
+                  }
+            }
+      }
+      .contentWrap {
+            margin-left: 5vw;
+            margin-right: 5vw;
+      }
+
+      .heroSection {
+            justify-content: space-between;
+      }
+}
+
+@media only screen and (max-width: 1500px) {
+      .heroSection {
+            img,
+            section {
+                  padding-left: 2vw;
+                  padding-right: 2vw;
+            }
+            div {
+                  display: none;
+            }
+      }
+
+      .experience {
+            .worklist {
+                  .experienceList {
+                        div {
+                              margin-right: 5vw;
+                        }
+                        p {
+                              margin-left: 5vw;
+                        }
+                  }
+            }
+      }
+      .contactMe {
+            div {
+                  a {
+                        font-size: 0.8em;
+                        img {
+                              margin-right: 20px;
+                        }
+                  }
+            }
+      }
+}
+@media only screen and (max-width: 1200px) {
+      header {
+            .header {
+                  font-size: 0.9em;
+                  .contactNav {
+                        a {
+                              img {
+                                    max-width: 50px;
+                              }
+                        }
+                  }
+            }
+      }
+      .heroSection {
+            flex-direction: column;
+
+            section {
+                  margin-top: 50px;
+                  max-width: 600px;
+            }
+      }
+      .aboutMe {
+            flex-direction: column;
+
+            align-items: center;
+            .infoWrapper,
+            section {
+                  max-width: 600px;
+                  width: 100%;
+            }
+
+            .infoWrapper {
+                  order: 2;
+                  margin-top: 10vh;
+            }
+            section {
+                  order: 1;
+            }
+      }
+
+      .experience {
+            .worklist {
+                  .experienceList {
+                        div,
+                        p {
+                              width: 40%;
+                              min-width: 0;
+                              padding: 0;
+                              margin: 0;
+                        }
+                        p {
+                              padding-left: 10vw;
+                        }
+
+                        div {
+                              h4 {
+                                    span {
+                                          padding-left: 0;
+                                          display: block;
+                                    }
+                              }
+                              padding-left: 5vw;
+                        }
+                  }
+            }
+      }
+
+      .contactMe {
+            div {
+                  a {
+                        font-size: 0.65em;
+                        img {
+                              margin-right: 10px;
+                        }
+                  }
+            }
+      }
+}
+
+// Återställer om man kommer från mobilmenu (mer om man kollar på stor skärm så sidan ej går sönder
+@media only screen and (min-width: 1000px) {
+      header {
+            background-color: $white !important;
+
+            nav {
+                  a {
+                        color: $black !important;
+                  }
+                  ul {
+                        li:nth-child(n + 2) {
+                              a {
+                                    padding-left: 2vw !important;
+                              }
+                        }
+                  }
+            }
+
+            .headerLogo {
+                  content: url("assets/logo.png");
+            }
+            #mobileMenuOpen,
+            #mobileMenuClose {
+                  display: none !important;
+            }
+            .header {
+                  #mainNav,
+                  #contactNav {
+                        display: flex !important;
+                  }
+
+                  nav {
+                        ul {
+                              flex-direction: row;
+                        }
+                  }
+                  .contactNav {
+                        flex-direction: row;
+
+                        a {
+                              margin-top: -12px;
+                        }
+                        .header-email {
+                              content: url("assets/email.png");
+                        }
+                        .header-instagram {
+                              content: url("assets/instagram.png");
+                        }
+                        .header-linkedin {
+                              content: url("assets/linkedin.png");
+                        }
+                  }
+            }
+      }
+}
+@media only screen and (max-width: 1000px) {
+      body {
+            font-size: 1.6em;
+      }
+      header {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: space-between;
+            margin-left: 0 !important;
+            margin-right: 0 !important;
+            padding-left: 5vw;
+            padding-right: 5vw;
+            margin-bottom: 80px !important;
+
+            #mobileMenuOpen {
+                  display: block;
+            }
+            .header {
+                  display: flex;
+                  flex-direction: row;
+                  justify-content: space-around;
+
+                  #mainNav,
+                  #contactNav {
+                        display: none;
+                  }
+
+                  nav {
+                        margin-left: 20px;
+                        ul {
+                              flex-direction: column;
+                              align-items: flex-start;
+                              li {
+                                    padding-bottom: 10px;
+                              }
+                        }
+                  }
+                  .contactNav {
+                        flex-direction: column;
+
+                        a {
+                              margin: 0;
+                              margin-bottom: 20px;
+                              img {
+                                    max-width: 40px;
+                              }
+                        }
+                  }
+            }
+      }
+      .contactMe {
+            div {
+                  justify-content: space-evenly;
+                  a {
+                        img {
+                              margin-right: 0px;
+                              transition: transform 0.2s;
+                        }
+                        span {
+                              display: none;
+                        }
+                        &:hover {
+                              transform: scale(1.05);
+                        }
+                  }
+            }
+      }
+}
+
+@media only screen and (max-width: 800px) {
+}
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (max-width: 768px) {
+      .experience {
+            .colorLine {
+                  svg {
+                        left: 2%;
+                  }
+            }
+            .worklist {
+                  .experienceList {
+                        flex-direction: column;
+                        padding: 0;
+                        margin: 0;
+                        align-items: center;
+                        margin-left: 10vw;
+                        justify-content: space-between;
+                        margin-bottom: 100px;
+
+                        div,
+                        p {
+                              width: 85%;
+                              margin: 0;
+                              padding: 0;
+                        }
+
+                        p {
+                              margin-top: 30px;
+                        }
+                  }
+            }
+      }
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (max-width: 600px) {
+      header {
+            align-items: flex-start;
+            padding-top: 50px;
+            .header {
+                  flex-direction: column;
+                  padding-top: 0;
+
+                  .headerLogo {
+                        max-width: 100px;
+                  }
+                  .menu-open,
+                  .menu-close {
+                        max-width: 70px;
+                        margin-top: 80px;
+                  }
+
+                  #mainNav,
+                  #contactNav {
+                        align-self: center;
+                        margin-left: 11vw;
+                  }
+
+                  #mainNav {
+                        margin-bottom: 40px;
+                        margin-top: 40px;
+                  }
+                  #contactNav {
+                        flex-direction: row;
+
+                        a {
+                              margin: 0 10px !important;
+                              img {
+                                    max-width: 50px;
+                              }
+                        }
+                  }
+            }
+      }
+      footer {
+            min-height: 300px;
+            img {
+                  max-width: 100px;
+                  padding-top: 10vh;
+            }
+            p {
+                  font-size: 0.7em;
+                  a {
+                        font-size: 1.1em;
+                  }
+            }
+      }
+}
+
+@media only screen and (max-width: 500px) {
+      .heroSection {
+            section {
+                  h2 {
+                        strong {
+                              display: inline;
+                        }
+                  }
+            }
+      }
+      .aboutMe {
+            .infoWrapper {
+                  align-self: center;
+            }
+      }
+}
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 400px) {
+      header {
+            .header {
+                  flex-grow: 0 !important;
+                  #mainNav {
+                        align-self: flex-start;
+                        margin-left: 5vw;
+                  }
+
+                  #contactNav {
+                        flex-direction: column;
+                        margin-left: 0;
+                        a {
+                              padding-bottom: 20px;
+                        }
+                  }
+            }
+      }
+      h3 {
+            font-size: 1.4em;
+      }
+      h2 {
+            font-size: 1.5em;
+      }
+      .contentWrap {
+            margin-left: 10vw;
+            margin-right: 10vw;
+      }
+
+      .heroSection {
+            section {
+                  a {
+                        font-size: 1em;
+                  }
+            }
+      }
+
+      .aboutMe {
+            .infoWrapper {
+                  div {
+                        img {
+                              max-width: 75px;
+                        }
+                        h4 {
+                              font-size: 1em;
+                              margin-left: 5vw;
+                        }
+                  }
+            }
+      }
+
+      .experience {
+            .colorLine {
+                  display: none;
+            }
+            .worklist {
+                  .experienceList {
+                        margin-left: 0;
+                        justify-content: center;
+
+                        div,
+                        p {
+                              width: 100%;
+                        }
+
+                        div {
+                              h4 {
+                                    font-size: 1.1em;
+                                    span {
+                                          font-size: 0.9em;
+                                    }
+                              }
+                              h5 {
+                                    font-size: 0.9em;
+                              }
+                        }
+                  }
+            }
+      }
+
+      .contactMe {
+            div {
+                  justify-content: space-between;
+
+                  a {
+                        img {
+                              max-width: 50px;
+                        }
+                  }
+            }
+      }
+}
+
+@media only screen and (max-width: 300px) {
+      .aboutMe {
+            .infoWrapper {
+                  div {
+                        display: flex;
+                        flex-direction: column;
+                        align-items: center;
+                        justify-content: center;
+
+                        img {
+                              max-width: 100%;
+                        }
+                        h4 {
+                              font-size: 1.2em;
+                              margin-left: 0;
+                              text-align: center;
+                              margin-top: 20px;
+                        }
+                  }
+            }
+      }
+
+      .contactMe {
+            div {
+                  flex-direction: column;
+                  align-items: center;
+
+                  a {
+                        margin-top: 30px;
+                  }
+            }
+      }
+
+      footer {
+            p {
+                  display: flex;
+                  flex-direction: column;
+                  align-items: center;
+                  justify-content: center;
+                  margin-bottom: 6vh;
+
+                  span {
+                        display: block;
+                  }
+                  a {
+                        font-size: 1em;
                   }
             }
       }
