--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
+/* -------------------------    GENERAL    ------------------------- */
 body {
   font-family: "Inter", sans-serif;
   background-color: #f8f8ff;
@@ -37,6 +38,10 @@ h3 {
 
 .accentColor {
   color: #c70039;
+}
+
+.pointer {
+  cursor: pointer;
 }
 
 /* -------------------------    HEADER    ------------------------- */
