--- a/css/main.css
+++ b/css/main.css
@@ -767,6 +767,9 @@ header {
     padding-left: 0;
     padding-top: 15px;
   }
+  .hero-img {
+    content: url("../assets/profileMobile.png");
+  }
 }
 @media only screen and (max-width: 600px) {
   header {
